--- a/monitoring/templates/monitoring/dashboard.html
+++ b/monitoring/templates/monitoring/dashboard.html
@@ -22,7 +22,7 @@
 <!-- Card Container -->
 <div class="card-container">
     {% for check in monitoring_checks %}
-        <div class="card" onclick="openChart('{{ check.id }}')">
+        <div class="card" onclick="handleCardClick('{{ check.id }}')">
             <h3 style="display: flex; align-items: center; gap: 15px;">
                 {{ check.name_of_check }}
                 <a href="javascript:void(0);" title="Edit Check" onclick="openEditForm('{{ check.id }}', event)" class="add-button" style="display: inline-flex; align-items: center;">
@@ -57,6 +57,10 @@
             {% endwith %}
         </div>
     {% endfor %}
+</div>
+<h2>Ping and Port:</h2>
+<div class="sub-card-container">
+    <!-- Cards will be added dynamically here -->
 </div>
 
 <!-- Chart Container -->
