--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -276,19 +276,17 @@
     background-color: #ddd;
 }
 
-/* Overlay style */
 .overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Grey with some transparency */
-    display: none; /* Initially hidden */
-    z-index: 999; /* Make sure it's above other content */
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 999;
 }
 
-/* Popup style */
 .success-popup {
     position: fixed;
     top: 50%;
@@ -297,10 +295,9 @@
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    z-index: 1000; /* Popup should be above the overlay */
+    z-index: 1000;
 }
 
-/* Popup content style */
 .popup-content {
     text-align: center;
 }
@@ -309,6 +306,54 @@
 #countdown {
     font-size: 20px;
     font-weight: bold;
-    color: #008000; /* Green color */
-    transition: all 1s ease; /* Smooth transition for all properties */
+    color: #008000;
+    transition: all 1s ease;
+}
+
+.sub-card-container {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+    padding: 10px;
+    white-space: nowrap;
+}
+
+.latest-status {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+
+.status-indicator-pp {
+    font-size: 1em;
+    margin-bottom: 5px;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.sub-card {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-out forwards;
+    margin-bottom: 15px;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 10px;
+    cursor: pointer;
+    flex: 0 0 auto;
+    width: 180px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    font-size: 14px;
+    text-align: center; 
 }
